# MLP

./: .gitignore  CMakeLists.txt  main.cc  main.cu
MLP/: teste.cc  teste.h
